--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-  <ul id = "nav" class="nav justify-content-end nav-bar animated fadeInLeft delay -1.5s">
+  <ul id="nav" class="nav justify-content-end nav-bar animated fadeInLeft delay -1.5s">
     <li class="nav-item">
-      <a class="nav-link active" href="#">Skills</a>
+      <a class="nav-link active" href="skills.html">Skills</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Projects</a>
@@ -29,22 +29,9 @@
     </li>
 
   </ul>
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <div id = "dropdown" class="dropdown nav-bar-sm">
-    <button class="btn btn-secondary dropdown-toggle" type="button
-     id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+  <div id="dropdown" class="dropdown nav-bar-sm">
+    <button class="btn btn-secondary dropdown-toggle animated fadeInDown" type="button"
+     id=" dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
     <div class="dropdown-menu dropdown-nav">
       <a class="dropdown-item" href="#">Skills</a>
       <a class="dropdown-item" href="#">Projects</a>
@@ -52,25 +39,13 @@
       <a class="dropdown-item" href="#">Contact Me</a>
     </div>
   </div>
-
-
-
-
-
-
-  <h2 class="animated fadeInDown delay -1.5s">Hey Visitor, I'm Jishnu</h2>
-
-
-
-
-
-
-<footer class = "footer animated zoomIn">
-<i class="fab fa-linkedin x1"></i>
-<i class="fab fa-facebook"></i>
-<i class="fab fa-github"></i>
-<i class="fab fa-instagram"></i>
-</footer>
+  <h2 id="heading" class="animated fadeInDown delay -1.5s">Hey Visitor, I'm Jishnu</h2>
+  <footer class="footer animated zoomIn">
+    <i class="fab fa-linkedin x1"></i>
+    <i class="fab fa-facebook"></i>
+    <i class="fab fa-github"></i>
+    <i class="fab fa-instagram"></i>
+  </footer>
 
   <script src="script.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
